# aocbot

./: .gitignore  Cargo.nix  Cargo.toml  LICENSE  README.md  config.toml  crate-hashes.json  flake.nix  users.toml
.github/workflows/: nix.yml  rust.yml
nix/: module.nix  package.nix
src/: config.rs  context.rs  lib.rs  main.rs  mastodon.rs
src/aoc/: api.rs  client.rs  day.rs  mod.rs  models.rs
src/matrix/: mod.rs  utils.rs
src/matrix/commands/: admin.rs  mod.rs  parser.rs
src/matrix/commands/aoc/: clear_cache.rs  day.rs  join.rs  leaderboard.rs  mod.rs  solutions.rs  user.rs
src/matrix/event_handlers/: mod.rs  on_invite.rs  on_member.rs  on_message.rs
src/tasks/: garygrady_posts.rs  join_leave_notifications.rs  mod.rs  solve_notifications.rs  unlock_announcements.rs
src/utils/: datetime.rs  fmt.rs  mod.rs  regex_set_replacer.rs  store.rs
src/utils/serde/: mod.rs  timestamp.rs  via_string.rs
